[Feat/#14]  - pd 맞춰서 ID 찾기 변경